Closed Bug 1540988 Opened 7 years ago Closed 5 years ago

Doing CMD+two finger scroll to zoom breaks layout and looses sync with browser-fullZoom with apz.allow_zooming

Categories

(Core :: Panning and Zooming, defect, P3)

67 Branch
x86_64
macOS
defect

Tracking

()

RESOLVED FIXED
mozilla80
Tracking Status
firefox80 --- fixed

People

(Reporter: mikedeboer, Assigned: kats, NeedInfo)

References

(Blocks 1 open bug)

Details

(Whiteboard: apz-planning)

Attachments

(1 file)

This is OSX-only (I'm currently on Mojave) AFAICT, using Firefox 67 Beta.

I've set OSX accessibility zoom to be activated using the '^ Ctrl' modifier.

Sometimes I can only restore the state by closing the tab and opening a new one with the copied URL. Of course that way I lose my navigation history.

Can you describe in a bit more detail what your STR are? CMD+two finger scroll works fine for me on 67 beta on macOS.

Flags: needinfo?(mdeboer)
Version: 57 Branch → 67 Branch

Of course:

Video of the issue in action: https://www.youtube.com/watch?v=m6W84nrjVcE&feature=youtu.be

STR:

  1. Open this bug in a separate tab.
  2. Hold the Command key while zooming in and out using the two-finger swipe gesture. (Watch the zoom percentage label updating)
  3. Press Command+0 after a while to reset the zoom level to 100%

Expected the result:

The content snaps back to its correct zoom level and proper scroll position.

Actual result:

The content looks stuck at a certain zoom level that's always larger than normal. Also the scroll position is weirdly snapped back.

Might this be related to the virtual viewport at all?

Flags: needinfo?(mdeboer)

Hm, interesting. I still cannot reproduce. When I change the zoom the page content remains centered in the window, whereas in your video even the first zoom out to 90% shifts it over to the right. Do you see the problem in a clean profile?

(In reply to Mike de Boer [:mikedeboer] from comment #3)

Might this be related to the virtual viewport at all?

I don't think so, as that currently only affects mobile.

Oh, on a new profile it doesn't happen to me indeed! I had 'apz.allow_zooming' set to true in this profile, which might be what broke it.

Yep, can confirm that unsetting that pref fixed it for me. Please feel free to do whatever with this bug ;-)

Let's make it block desktop zooming.

Summary: Doing CMD+two finger scroll to zoom breaks layout and looses sync with browser-fullZoom → Doing CMD+two finger scroll to zoom breaks layout and looses sync with browser-fullZoom with apz.allow_zooming
Priority: -- → P3
Whiteboard: desktop-zoom-nightly
Whiteboard: desktop-zoom-nightly → apz-planning

I think if we disable pinching while modifier keys are pressed, that should resolve this issue. The basic problem is that command+scroll can easily get turned into command+pinch and both have a somewhat-similar effect so the user may not realize they ended up doing a pinch instead of a reflow zoom.

Assignee: nobody → kats
Pushed by kgupta@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/c9b542fa6957 Don't do trackpad-based pinch zooming if keyboard modifiers are present. r=botond
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80

Hi Mike! I've tried to reproduce this issue by following the steps from comment 3, while having the apz.allow_zooming pref set to true on an affected Nightly build 80.0a1 (20200720094507). Unfortunately, I was unable to see the behaviour described by you on macOS 10.14.

Would you mind confirming this fix on latest Beta 80, given the fact that I did not encounter the initial bug?

Flags: needinfo?(mdeboer)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: