Bug 1540988 - Don't do trackpad-based pinch zooming if keyboard modifiers are present. r=botond

Differential Revision: https://phabricator.services.mozilla.com/D84204